source_code/gatt_server/build/log/idf_py_stdout_output_131507
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/bootloader/esp-idf/esptool_py && /home/doannhat214031/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/doannhat214031/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj 
/home/doannhat214031/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/config -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main -I/home/doannhat214031/esp-idf/components/newlib/platform_include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/include/freertos -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/include -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/include/soc -I/home/doannhat214031/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/doannhat214031/esp-idf/components/esp_hw_support/port/esp32/. -I/home/doannhat214031/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/doannhat214031/esp-idf/components/heap/include -I/home/doannhat214031/esp-idf/components/log/include -I/home/doannhat214031/esp-idf/components/soc/include -I/home/doannhat214031/esp-idf/components/soc/esp32 -I/home/doannhat214031/esp-idf/components/soc/esp32/include -I/home/doannhat214031/esp-idf/components/hal/esp32/include -I/home/doannhat214031/esp-idf/components/hal/include -I/home/doannhat214031/esp-idf/components/hal/platform_port/include -I/home/doannhat214031/esp-idf/components/esp_rom/include -I/home/doannhat214031/esp-idf/components/esp_rom/include/esp32 -I/home/doannhat214031/esp-idf/components/esp_rom/esp32 -I/home/doannhat214031/esp-idf/components/esp_common/include -I/home/doannhat214031/esp-idf/components/esp_system/include -I/home/doannhat214031/esp-idf/components/esp_system/port/soc -I/home/doannhat214031/esp-idf/components/esp_system/port/include/private -I/home/doannhat214031/esp-idf/components/xtensa/include -I/home/doannhat214031/esp-idf/components/xtensa/esp32/include -I/home/doannhat214031/esp-idf/components/lwip/include -I/home/doannhat214031/esp-idf/components/lwip/include/apps -I/home/doannhat214031/esp-idf/components/lwip/include/apps/sntp -I/home/doannhat214031/esp-idf/components/lwip/lwip/src/include -I/home/doannhat214031/esp-idf/components/lwip/port/include -I/home/doannhat214031/esp-idf/components/lwip/port/freertos/include -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/doannhat214031/esp-idf/components/esp_http_client/include -I/home/doannhat214031/esp-idf/components/esp_event/include -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/cJSON/include -I/home/doannhat214031/esp-idf/components/nvs_flash/include -I/home/doannhat214031/esp-idf/components/spi_flash/include -I/home/doannhat214031/esp-idf/components/esp_partition/include -I/home/doannhat214031/esp-idf/components/bt/include/esp32/include -I/home/doannhat214031/esp-idf/components/bt/common/osi/include -I/home/doannhat214031/esp-idf/components/bt/common/api/include/api -I/home/doannhat214031/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/home/doannhat214031/esp-idf/components/bt/common/btc/profile/esp/include -I/home/doannhat214031/esp-idf/components/bt/host/bluedroid/api/include/api -I/home/doannhat214031/esp-idf/components/bt/porting/ext/tinycrypt/include -I/home/doannhat214031/esp-idf/components/esp_timer/include -I/home/doannhat214031/esp-idf/components/esp_wifi/include -I/home/doannhat214031/esp-idf/components/esp_wifi/wifi_apps/include -I/home/doannhat214031/esp-idf/components/esp_phy/include -I/home/doannhat214031/esp-idf/components/esp_phy/esp32/include -I/home/doannhat214031/esp-idf/components/esp_netif/include -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht -I/home/doannhat214031/esp-idf/components/driver/include -I/home/doannhat214031/esp-idf/components/driver/deprecated -I/home/doannhat214031/esp-idf/components/driver/analog_comparator/include -I/home/doannhat214031/esp-idf/components/driver/dac/include -I/home/doannhat214031/esp-idf/components/driver/gpio/include -I/home/doannhat214031/esp-idf/components/driver/gptimer/include -I/home/doannhat214031/esp-idf/components/driver/i2c/include -I/home/doannhat214031/esp-idf/components/driver/i2s/include -I/home/doannhat214031/esp-idf/components/driver/ledc/include -I/home/doannhat214031/esp-idf/components/driver/mcpwm/include -I/home/doannhat214031/esp-idf/components/driver/parlio/include -I/home/doannhat214031/esp-idf/components/driver/pcnt/include -I/home/doannhat214031/esp-idf/components/driver/rmt/include -I/home/doannhat214031/esp-idf/components/driver/sdio_slave/include -I/home/doannhat214031/esp-idf/components/driver/sdmmc/include -I/home/doannhat214031/esp-idf/components/driver/sigma_delta/include -I/home/doannhat214031/esp-idf/components/driver/spi/include -I/home/doannhat214031/esp-idf/components/driver/temperature_sensor/include -I/home/doannhat214031/esp-idf/components/driver/touch_sensor/include -I/home/doannhat214031/esp-idf/components/driver/twai/include -I/home/doannhat214031/esp-idf/components/driver/uart/include -I/home/doannhat214031/esp-idf/components/driver/usb_serial_jtag/include -I/home/doannhat214031/esp-idf/components/driver/touch_sensor/esp32/include -I/home/doannhat214031/esp-idf/components/esp_pm/include -I/home/doannhat214031/esp-idf/components/esp_ringbuf/include -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/esp_idf_lib_helpers -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server=. -fmacro-prefix-map=/home/doannhat214031/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj -c /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main/gatts_demo.c
In file included from /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main/gatts_demo.c:29:
/home/doannhat214031/esp-idf/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main/gatts_demo.c: In function 'sensor_task':
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main/gatts_demo.c:431:27: error: expected expression before 'int'
  431 |         int filtered_co = int(filter_mq7_apply_ema(ppm_co, 0.3f));  // Lọc EMA với alpha = 0.3
      |                           ^~~
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main/gatts_demo.c:436:30: error: expected expression before 'int'
  436 |         int filtered_smoke = int(ppm_smoke); // Không cần lọc EMA cho khói, chỉ dùng trung bình
      |                              ^~~
ninja: build stopped: subcommand failed.
